@@ -5,6 +5,7 @@ Development
 - pmount-hal: replace slashes with underscores in label
 - pmount: mount UDF with default umask 000, so that the UDF permissions are not
   altered
+- check for HAL libraries at configure time and conditionally build pmount-hal
 
 0.9.11
 ------
